Implementation for EJBContainer. Tests refactoring